--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,8 +10,15 @@ kotlinxCoroutines = "1.9.0"
 ktor = "3.1.3"
 koin = "4.0.4"
 dockerJava = "3.5.1"
+ascend = "2025.5-c701147"
+kotlinLogging = "7.0.3"
+logback = "1.5.18"
+redis = "6.0.0"
 
 [libraries]
+ascend = { module = "dev.fruxz:ascend", version.ref = "ascend" }
+redis = { module = "redis.clients:jedis", version.ref = "redis" }
+
 kotlinxDatetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinxSerialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJSON" }
 kotlinxCoroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
@@ -23,8 +30,10 @@ ktorSerializationKotlinxJson = { module = "io.ktor:ktor-serialization-kotlinx-js
 
 koinCore = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koinKtor = { module = "io.insert-koin:koin-ktor", version.ref = "koin" }
+koinSlf4j = { module = "io.insert-koin:koin-logger-slf4j", version.ref = "koin" }
 
 dockerJava = { module = "com.github.docker-java:docker-java", version.ref = "dockerJava" }
+logbackClassic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 
 
 # Libraries can be bundled together for easier import
@@ -36,7 +45,14 @@ backend = [
     "ktorServerContentNegotiation",
     "ktorSerializationKotlinxJson",
     "koinCore",
-    "koinKtor"
+    "koinKtor",
+    "koinSlf4j",
+    "redis",
+    "dockerJava",
+]
+utilities = [
+    "ascend",
+    "logbackClassic"
 ]
 
 [plugins]
