feat: placeholders & api improvements

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,11 @@ velocity = "3.4.0-SNAPSHOT"
 kotlinDotenv = "6.5.1"
 kUtils = "beta-0.0.2"
 yaml = "2.2"
-protospec = "1.4.3.1.20250610182256.402850c74b60"
+protospec = "1.4.3.1.20250611114417.f4d9098f4847"
+protobuf = "3.25.2"
+grpc = "1.61.0"
+grpc-kotlin = "1.4.1"
+toml = "0.7.2"
 
 [libraries]
 ascend = { module = "dev.fruxz:ascend", version.ref = "ascend" }
@@ -50,6 +54,15 @@ kUtilsCore = { module = "com.github.InvalidJoker.KUtils:core", version.ref = "kU
 yaml = { module = "org.yaml:snakeyaml", version.ref = "yaml" }
 protospec = { module = "build.buf.gen:invalidjoker_kloud_grpc_kotlin", version.ref = "protospec" }
 
+protobuf-kotlin = { module = "com.google.protobuf:protobuf-kotlin", version.ref = "protobuf" }
+
+grpc-stub = { module = "io.grpc:grpc-stub", version.ref = "grpc" }
+grpc-kotlin-stub = { module = "io.grpc:grpc-kotlin-stub", version.ref = "grpc-kotlin" }
+grpc-protobuf = { module = "io.grpc:grpc-protobuf", version.ref = "grpc" }
+grpc-netty-shaded = { module = "io.grpc:grpc-netty-shaded", version.ref = "grpc" }
+
+toml = { module = "com.moandjiezana.toml:toml4j", version.ref = "toml" }
+
 # Libraries can be bundled together for easier import
 [bundles]
 kotlinxEcosystem = ["kotlinxDatetime", "kotlinxSerialization", "kotlinxCoroutines"]
@@ -60,7 +73,13 @@ backend = [
     "ktorSerializationKotlinxJson",
     "dockerJava",
     "dockerJavaOkHttp",
-    "protospec"
+    "protospec",
+    "protobuf-kotlin",
+    "grpc-stub",
+    "grpc-kotlin-stub",
+    "grpc-protobuf",
+    "grpc-netty-shaded",
+    "toml"
 ]
 utilities = [
     "ascend",
