--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -1,11 +1,12 @@
 services:
   redis:
+    container_name: dev-redis
     image: redis:latest
     ports:
       - "6379:6379"
     volumes:
-      - redis-data:/data
+      - dev-redis-data:/data
     command: ["redis-server", "--save", "60", "1"]
 
 volumes:
-  redis-data:
+  dev-redis-data:
